--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,3 +57,13 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Zlab\UserBundle\Entity\User
+    profile:  # Authentication Form
+        form:
+            type:               fos_user_profile
+            #handler:            fos_user.profile.form.handler.default
+            name:               fos_user_profile_form
+            #validation_groups:  [Authentication] # Please note : this is not the default value
